# elasticbooks

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  import.js  package-lock.json  package.json  server.js  tsconfig.json
backend-go/: Dockerfile  README.md  go.mod  import.go  main.go
backend-rs/: Cargo.toml  Dockerfile  README.md
backend-rs/src/: config.rs  es.rs  handlers.rs  importer.rs  main.rs  query.rs
backend/src/: import.ts  server.ts  types.ts
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: _redirects
frontend/src/: App.jsx  App.tsx  api.ts  index.css  types.ts  vite-env.d.ts
scripts/: compare_backends.py
