[package]
name = "bookshelf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bookshelf"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["http1", "http2"] }
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client (for talking to Elasticsearch)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML parsing
quick-xml = { version = "0.36", features = ["serialize"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
